--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 flask==3.0.0
 pytest==4.0.1
 Jinja2==3.1.1
-bitlyshortener
-validators
-python-dotenv
+bitlyshortener~=0.6.4
+validators~=0.22.0
+python-dotenv~=1.0.0
+requests~=2.31.0
